--- a/scipt.ipynb
+++ b/scipt.ipynb
@@ -3,20 +3,149 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 视频剥离"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "找到.env文件: /Users/eureka/VSCodeProjects/Dianxin/.env\n",
+      "=== .env文件内容 ===\n",
+      "dashscope_api_key= 'sk-9df5ae7489d44f18902719b7b1489b69'\n",
+      "===================\n",
+      "\n",
+      "=== 当前环境变量 ===\n",
+      "COMMAND_MODE: unix2003\n",
+      "CONDA_DEFAULT_ENV: pyTorchgpuEnv\n",
+      "CONDA_EXE: /opt/anaconda3/bin/conda\n",
+      "CONDA_PREFIX: /opt/anaconda3/envs/pyTorchgpuEnv\n",
+      "CONDA_PROMPT_MODIFIER: (pyTorchgpuEnv) \n",
+      "CONDA_PYTHON_EXE: /opt/anaconda3/bin/python\n",
+      "CONDA_SHLVL: 2\n",
+      "CURSOR_TRACE_ID: 332e2efc512a44d7b04764b197e131dd\n",
+      "GSETTINGS_SCHEMA_DIR: /opt/anaconda3/share/glib-2.0/schemas\n",
+      "HOME: /Users/eureka\n",
+      "HOMEBREW_API_DOMAIN: http****************************************/api\n",
+      "HOMEBREW_BOTTLE_DOMAIN: https://mirrors.ustc.edu.cn/homebrew-bottles\n",
+      "HOMEBREW_CELLAR: /opt/homebrew/Cellar\n",
+      "HOMEBREW_PIP_INDEX_URL: https://pypi.mirrors.ustc.edu.cn/simple\n",
+      "HOMEBREW_PREFIX: /opt/homebrew\n",
+      "HOMEBREW_REPOSITORY: /opt/homebrew\n",
+      "INFOPATH: /opt/homebrew/share/info:\n",
+      "LANG: C.UTF-8\n",
+      "LOGNAME: eureka\n",
+      "MallocNanoZone: 0\n",
+      "OLDPWD: /\n",
+      "ORIGINAL_XDG_CURRENT_DESKTOP: undefined\n",
+      "OSLogRateLimit: 64\n",
+      "PATH: /opt/anaconda3/envs/pyTorchgpuEnv/bin:/opt/homebrew/Cellar:/opt/homebrew/bin:/opt/anaconda3/bin:/opt/anaconda3/condabin:/opt/anaconda3/bin:/opt/homebrew/Cellar:/opt/homebrew/bin:/Users/eureka/.elan/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin:/Library/Apple/usr/bin:/Library/TeX/texbin:/Applications/Wireshark.app/Contents/MacOS:/Users/eureka/.cargo/bin:/usr/local/bin:/usr/bin:/usr/local/texlive/2024/bin/x86_64-darwin:/usr/local/bin:/usr/bin\n",
+      "PWD: /\n",
+      "SHELL: /bin/zsh\n",
+      "SHLVL: 2\n",
+      "SSH_AUTH_SOCK: /private/tmp/com.apple.launchd.RjzKLU1wcJ/Listeners\n",
+      "TMPDIR: /var/folders/f_/zgh1n7tj6wqcgk47sst4brvw0000gn/T/\n",
+      "USER: eureka\n",
+      "VSCODE_CODE_CACHE_PATH: /Users/eureka/Library/Application Support/Cursor/CachedData/031e7e0ff1e2eda9c1a0f5df67d44053b059c5d0\n",
+      "VSCODE_CRASH_REPORTER_PROCESS_TYPE: extensionHost\n",
+      "VSCODE_CWD: /\n",
+      "VSCODE_ESM_ENTRYPOINT: vs/workbench/api/node/extensionHostProcess\n",
+      "VSCODE_HANDLES_UNCAUGHT_ERRORS: true\n",
+      "VSCODE_IPC_HOOK: /Users/eureka/Library/Application Support/Cursor/1.2.-main.sock\n",
+      "VSCODE_NLS_CONFIG: {\"userLocale\":\"zh-cn\",\"osLocale\":\"zh-cn\",\"resolvedLanguage\":\"en\",\"defaultMessagesFile\":\"/Applications/Cursor.app/Contents/Resources/app/out/nls.messages.json\",\"locale\":\"zh-cn\",\"availableLanguages\":{}}\n",
+      "VSCODE_PID: 18593\n",
+      "VSCODE_PROCESS_TITLE: extension-host [1-1]\n",
+      "XPC_FLAGS: 0x0\n",
+      "XPC_SERVICE_NAME: 0\n",
+      "_: /opt/anaconda3/envs/pyTorchgpuEnv/bin/python\n",
+      "__CFBundleIdentifier: com.todesktop.230313mzl4w4u92\n",
+      "__CF_USER_TEXT_ENCODING: 0x1F5:0x19:0x34\n",
+      "ELECTRON_RUN_AS_NODE: 1\n",
+      "VSCODE_L10N_BUNDLE_LOCATION: \n",
+      "PYTHONUNBUFFERED: 1\n",
+      "PYTHONIOENCODING: utf-8\n",
+      "_CE_CONDA: \n",
+      "CONDA_PREFIX_1: /opt/anaconda3\n",
+      "CONDA_ROOT: /opt/anaconda3\n",
+      "dashscope_api_key: sk-9***************************9b69\n",
+      "_CE_M: \n",
+      "CONDA_ALLOW_SOFTLINKS: false\n",
+      "PYDEVD_IPYTHON_COMPATIBLE_DEBUGGING: 1\n",
+      "PYTHON_FROZEN_MODULES: on\n",
+      "PYDEVD_USE_FRAME_EVAL: NO\n",
+      "TERM: xterm-color\n",
+      "CLICOLOR: 1\n",
+      "FORCE_COLOR: 1\n",
+      "CLICOLOR_FORCE: 1\n",
+      "PAGER: cat\n",
+      "GIT_PAGER: cat\n",
+      "MPLBACKEND: module://matplotlib_inline.backend_inline\n",
+      "===================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 打印这个路径下的环境变量/Users/eureka/VSCodeProjects/Dianxin/.env\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# 指定.env文件路径\n",
+    "env_path = Path(\"/Users/eureka/VSCodeProjects/Dianxin/.env\")\n",
+    "\n",
+    "# 检查文件是否存在\n",
+    "if env_path.exists():\n",
+    "    print(f\"找到.env文件: {env_path}\")\n",
+    "    \n",
+    "    # 读取并打印.env文件内容\n",
+    "    try:\n",
+    "        with open(env_path, 'r', encoding='utf-8') as f:\n",
+    "            env_content = f.read()\n",
+    "            print(\"=== .env文件内容 ===\")\n",
+    "            print(env_content)\n",
+    "            print(\"===================\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"读取.env文件时出错: {e}\")\n",
+    "else:\n",
+    "    print(f\".env文件不存在: {env_path}\")\n",
+    "\n",
+    "# 打印当前环境变量\n",
+    "print(\"\\n=== 当前环境变量 ===\")\n",
+    "for key, value in os.environ.items():\n",
+    "    if any(keyword in key.lower() for keyword in ['api', 'key', 'token', 'secret']):\n",
+    "        # 对于敏感信息，只显示前几个字符\n",
+    "        masked_value = value[:4] + '*' * (len(value) - 8) + value[-4:] if len(value) > 8 else '***'\n",
+    "        print(f\"{key}: {masked_value}\")\n",
+    "    else:\n",
+    "        print(f\"{key}: {value}\")\n",
+    "print(\"===================\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pyTorchgpuEnv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
